--- a/app.json
+++ b/app.json
@@ -29,6 +29,15 @@
     "plugins": [
       "expo-router",
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4edf8333-e757-4252-bac0-d2204308ecec"
+      }
+    },
+    "owner": "tarri9192"
   }
 }
