--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@supabase/supabase-js": "^2.43.2",
-    "expo": "~51.0.8",
-    "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.4",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.23",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-appwrite": "^0.3.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "skgmall": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native/typescript-config": "^0.76.5",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
