--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@supabase/supabase-js": "^2.43.2",
+    "@types/validator": "^13.12.2",
     "expo": "^52.0.23",
     "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
+    "expo-font": "~13.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-status-bar": "~2.0.0",
+    "expo-router": "~4.0.16",
+    "expo-status-bar": "~2.0.1",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.3.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "skgmall": "file:"
+    "skgmall": "file:",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
