--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@supabase/supabase-js": "^2.43.2",
     "@types/validator": "^13.12.2",
     "expo": "^52.0.23",
@@ -24,11 +24,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.3.1",
+    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "skgmall": "file:",
     "validator": "^13.12.0"
