--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.43.2",
     "@types/validator": "^13.12.2",
     "expo": "^52.0.23",
